# as.axis.dataminer

./: .gitignore  CLAUDE.md  PRD.md  README.md  example-agent.py  pyproject.toml
.claude/: settings.json
.claude/agents/: ancient-epic-scholar.md  cultural-domain-expert.md  data-architect.md  mnemosyne.md  product-lead.md  technical-lead.md  ux-creative-lead.md
config/: feature-flags.yaml  models.yaml
doc/: 10-ai-harness.md  PRD.md  ai-harness-sync.md  issue-ocr-cyrillic-language.md  plan-meridian-app.md  plan-meridian-exports.md  plan-meridian-witness-layers.md  plan-sisyphus-gaps.md  plan-sub-episode-implementation.md  user-guide.md
doc/app-concepts/: 01-domain-briefs.md  02-cross-pollination.md  03-concept-a-broad-reader.md  README.md  (+5 more)
gilgamesh/: manifest.yaml  nas-confirmed.yaml  nas-proposals.yaml  nas-revisions.yaml  review-decisions.yaml
notebooks/: CLAUDE.md  README.md
scripts/: auto_confirm_bakhtin_extended.py  build_en_spine_witness.py  build_ru_spine_witness.py  strip_bad_gnedich.py
sisyphus/: __init__.py  backfill_citations.py  cli.py  flags.py  llm.py  schema.py
sources/: README.md
tests/: test_constellations.py  test_derive_bakhtin.py  test_derive_propp.py  test_derive_schema.py  test_derive_taxonomy.py  test_derive_tmi.py  test_embedding_paths.py  test_phase_a_structure_scan.py  test_phase_b_prompt.py  test_phase_c_citations.py  test_phase_f_embeddings.py  test_phase_f_parallel.py  test_phase_f_schema.py  test_roundtrip.py  test_schema_invariants.py  test_sub_episode_extension.py  test_validate_quality_gates.py  test_witness_layer.py
(+294 files in other folders)
