[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sisyphus"
version = "0.1.0"
description = "AI-agentic data preparation pipeline for the Mnemosyne Engine"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "anthropic>=0.28",
    "openai>=1.30",
    "pymupdf>=1.24",
    "lxml>=5.2",
    "ruamel.yaml>=0.18",
    "pydantic>=2.7",
    "rich>=13.7",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "pillow>=10.3"]
dev = ["pytest>=8", "hypothesis>=6.100", "pytest-cov>=5"]

[project.scripts]
sisyphus = "sisyphus.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sisyphus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
